--- a/sass/component/section/_section-page1.scss
+++ b/sass/component/section/_section-page1.scss
@@ -1,3 +1,5 @@
+@use "../../base/vars" as v;
+
 .section1-1{
     .container{
         .wrapper{
@@ -17,6 +19,93 @@
                 
                 // Son img etiketi için margin-left 0
               };
+        }
+    }
+}
+
+.section1-2{
+    .container{
+        .content{
+            margin-top: 6.3rem;
+            margin-bottom: 6.3rem;
+            .right-bar{
+                display: flex;
+                flex-direction: column;
+                gap:3.75rem;
+            }
+        }
+    }
+}
+
+.section1-3{
+    .container{
+        .content{
+            margin-bottom: 8.62rem;
+        }
+    }
+}
+
+.section1-4{
+    .container{
+        h3{
+            margin-bottom: 3.15rem;
+        }
+        .content-grid{
+            margin-bottom: 6rem;
+            display: flex;
+            justify-content: space-between;
+            //display: grid;
+            //grid-template-columns: repeat(3,1fr);
+            .c-wrapper{
+                .c-item-01{
+                    display: flex;
+                    flex-direction: column;
+                    gap: 63px;
+                    width: 373px;
+    
+                    .c-item-01-main{
+                        display: flex;
+                        flex-direction: column;
+                        gap: 18px;
+    
+                        .c-item-01-a{
+                            display: flex;
+                            align-items: center;
+                            gap: 12px;
+                            font-size: v.$font-size-xs;
+                            font-weight: v.$font-weight-lbold;
+                            .brand{
+                                color:v.$all-mode-orange;
+                                font-size: v.$font-size-nav;
+                            }
+                            .hr{
+                                width: 1px;
+                                background-color:v.$light-mode-nav;
+                                height: 14px;
+                            }
+                        }
+                        .c-item-01-b{
+                            width: 308px;
+                            padding-right: 20px;
+                            font-size: v.$font-size-text;
+                            font-weight:v.$font-weight-lbold;
+                            line-height: 35px;
+                            
+                        }
+                        .c-item-01-c{
+                            font-size: 18px;
+                            line-height: 25px;
+                            font-weight: $font-weight-normal;
+                        }
+    
+                        .c-item-01-d{
+                            font-size: v.$font-size-xs;
+                            line-height: 50px;
+                            font-weight: $font-weight-lbold;
+                        }
+                    }
+                }
+            }
         }
     }
 }
