--- a/sass/main.css
+++ b/sass/main.css
@@ -483,7 +483,7 @@ header .container .wrapper .c-item-03 {
   letter-spacing: 0em;
 }
 
-.section3-3 .link-list-li:last-child {
+.section2-3 .link-list-li:last-child {
   border-bottom: none;
 }
 
@@ -496,4 +496,70 @@ header .container .wrapper .c-item-03 {
   width: 280px;
   height: 50px;
   padding: 16px 35px;
+}
+.section1-2 .container .content {
+  margin-top: 6.3rem;
+  margin-bottom: 6.3rem;
+}
+.section1-2 .container .content .right-bar {
+  display: flex;
+  flex-direction: column;
+  gap: 3.75rem;
+}
+
+.section1-3 .container .content {
+  margin-bottom: 8.62rem;
+}
+
+.section1-4 .container h3 {
+  margin-bottom: 3.15rem;
+}
+.section1-4 .container .content-grid {
+  margin-bottom: 6rem;
+  display: flex;
+  justify-content: space-between;
+}
+.section1-4 .container .content-grid .c-wrapper .c-item-01 {
+  display: flex;
+  flex-direction: column;
+  gap: 63px;
+  width: 373px;
+}
+.section1-4 .container .content-grid .c-wrapper .c-item-01 .c-item-01-main {
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+}
+.section1-4 .container .content-grid .c-wrapper .c-item-01 .c-item-01-main .c-item-01-a {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  font-size: 14px;
+  font-weight: 400;
+}
+.section1-4 .container .content-grid .c-wrapper .c-item-01 .c-item-01-main .c-item-01-a .brand {
+  color: #F89B3A;
+  font-size: 16px;
+}
+.section1-4 .container .content-grid .c-wrapper .c-item-01 .c-item-01-main .c-item-01-a .hr {
+  width: 1px;
+  background-color: #BCBCBC;
+  height: 14px;
+}
+.section1-4 .container .content-grid .c-wrapper .c-item-01 .c-item-01-main .c-item-01-b {
+  width: 308px;
+  padding-right: 20px;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 35px;
+}
+.section1-4 .container .content-grid .c-wrapper .c-item-01 .c-item-01-main .c-item-01-c {
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: 300;
+}
+.section1-4 .container .content-grid .c-wrapper .c-item-01 .c-item-01-main .c-item-01-d {
+  font-size: 14px;
+  line-height: 50px;
+  font-weight: 400;
 }/*# sourceMappingURL=main.css.map */
