--- a/sass/base/_vars.scss
+++ b/sass/base/_vars.scss
@@ -16,14 +16,14 @@ $light-mode-footer: #BDBDBD;
 
 
 // Font
-$font-size-title: 36px;
-$font-size-text: 24px;
-$font-size-small: 20px;
-$font-size-xs:14px;
-$font-size-nav:16px;
-$font-size-lg: 46px;
-$font-size-big:80px;
-$font-size-60:60px;
+$font-size-title: 2.25rem;
+$font-size-text: 1.5rem;
+$font-size-small: 1.25rem;
+$font-size-xs:0.875rem;
+$font-size-nav:1rem;
+$font-size-lg: 2.875rem;
+$font-size-big:5rem;
+$font-size-60:3.75rem;
 $font-weight-normal: 300;
 $font-weight-lbold: 400;
 $font-weight-extra-bold: 800;
