--- a/sass/base/_structure.scss
+++ b/sass/base/_structure.scss
@@ -1,8 +1,14 @@
 @use "./vars"  as v;
 @import "./global";
+
+$sm: 769px;
+$md: 1025px;
+$lg: 1200px;
+
 .content {
     display: flex;
 }
+
 
 .main-title {
     font-size: v.$font-size-big;
