--- a/sass/base/_global.scss
+++ b/sass/base/_global.scss
@@ -5,12 +5,43 @@ html {
 }
 
 body {
+    font-family: "A";
     min-height: 100%;
     background-color: #FFF;
     overflow-x: hidden;
     font-size: 24px;
     line-height: 1.5;
     color:black;
+    transition: background-color 1s ease-in-out;
+    &.dark {
+        background-color:black;
+        color: white;
+        svg {
+            path {
+                stroke: white
+            }
+            circle{
+                stroke:white
+            }
+        }
+        ul{
+            color:white
+        }
+        button{
+            background-color: #FFF;
+            color:black;
+        }
+        input{
+            &::placeholder{
+                color:black;
+            }
+        }
+        a{
+            color:#FFF;
+        }
+        
+      }
+
 }
 img, svg {
     max-width: 100%;
@@ -26,13 +57,13 @@ img, svg {
 }
 
 .tab{
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 400;
     line-height: 18px;
     letter-spacing: 0px;
     text-align: left;
     color:#CCCCCC;
-    margin-bottom: 51px;
+    margin-bottom: 3.18rem;
 }
 
 //
