--- a/sass/component/layout/_footer.scss
+++ b/sass/component/layout/_footer.scss
@@ -13,6 +13,12 @@ footer{
             justify-content: space-between;
             padding: 58px;
             border-bottom: 1px solid v.$light-mode-title;
+
+            @media (max-width: $md) {
+                display: flex;
+                flex-direction: column;
+                gap: 1.5rem;
+            }
             
             .mail-section{
                 display: flex;
