--- a/sass/component/section/_section-page1.scss
+++ b/sass/component/section/_section-page1.scss
@@ -6,6 +6,9 @@
             display: flex;
             flex-direction: column;
             gap:3.75rem;
+            @media (max-width: $md) {
+                gap: 2.15rem;
+            }
 
             button{
                 width: 280px;
@@ -28,10 +31,17 @@
         .content{
             margin-top: 6.3rem;
             margin-bottom: 6.3rem;
+            @media (max-width: $md) {
+                margin-bottom: 4rem;
+                margin-top: 4rem;
+            }
             .right-bar{
                 display: flex;
                 flex-direction: column;
                 gap:3.75rem;
+                @media (max-width: $md) {
+                    gap: 2rem;
+                }
             }
         }
     }
@@ -41,6 +51,9 @@
     .container{
         .content{
             margin-bottom: 8.62rem;
+            @media (max-width: $md) {
+                margin-bottom: 6rem;
+            }
         }
     }
 }
@@ -49,24 +62,42 @@
     .container{
         h3{
             margin-bottom: 3.15rem;
+            @media (max-width: $md) {
+                margin-bottom: 2.15rem;
+            }
         }
         .content-grid{
             margin-bottom: 6rem;
             display: flex;
             justify-content: space-between;
+            gap:10px;
             //display: grid;
             //grid-template-columns: repeat(3,1fr);
+            @media (max-width: $md) {
+                margin-bottom: 4rem;
+            }
+            img{
+                @media (max-width: $md) {
+                    display: none;
+                }
+            }
             .c-wrapper{
                 .c-item-01{
                     display: flex;
                     flex-direction: column;
                     gap: 63px;
-                    width: 373px;
+                    //width: 373px;
+                    @media (max-width: $md) {
+                       gap:30px;
+                    }
     
                     .c-item-01-main{
                         display: flex;
                         flex-direction: column;
                         gap: 18px;
+                        @media (max-width: $md) {
+                            gap:10px;
+                         }
     
                         .c-item-01-a{
                             display: flex;
@@ -85,15 +116,18 @@
                             }
                         }
                         .c-item-01-b{
-                            width: 308px;
-                            padding-right: 20px;
+                            //width: 308px;
+                            width: 60%;
+                            padding-right: 1.25rem;
                             font-size: v.$font-size-text;
                             font-weight:v.$font-weight-lbold;
                             line-height: 35px;
-                            
+                            @media (max-width: $md) {
+                                width: 100%;
+                            }
                         }
                         .c-item-01-c{
-                            font-size: 18px;
+                            font-size: 1.125rem;
                             line-height: 25px;
                             font-weight: $font-weight-normal;
                         }
@@ -105,6 +139,8 @@
                         }
                     }
                 }
+
+                
             }
         }
     }
