--- a/sass/component/section/_section-page2.scss
+++ b/sass/component/section/_section-page2.scss
@@ -2,8 +2,13 @@
     .container{
         .wrapper{
             margin-bottom: 7.37rem;
+            @media (max-width: $md) {
+                
+                margin-bottom: 4rem;
+            }
+            
             h1{
-                padding-bottom: 33px;
+                padding-bottom: 2.063rem;
                 border-bottom: 1px solid #949494;
                 width: 60%;
             }
@@ -12,14 +17,18 @@
                 margin-top: 1.875rem;
                 margin-left: 21.875rem;
                 margin-bottom: 7.25rem;
+                @media (max-width: $md) {
+                    width: 100%;
+                    margin: 1rem auto 3rem;
+                }
             }
             .testiomonials{
                 margin-top: 5.18rem;
             }
             .deco{
-                padding-left: 40px;
+                padding-left: 2.5rem;
                 .decoration{
-                    margin-bottom: 21px;
+                    margin-bottom: 1.313rem;
                     &:before{
                         
                             content: "";
@@ -37,7 +46,7 @@
                 }
             }
             .name{
-                font-size: 22px;
+                font-size: 1.375rem;
                 font-weight: 400;
                 line-height: 50px;
                 letter-spacing: 0em;
@@ -56,6 +65,12 @@
                 row-gap: 22px;
                 -moz-column-gap: 55px;
                 column-gap: 55px;
+
+                @media (max-width: $sm) {
+                    grid-template-columns: repeat(2, 1fr);
+                    row-gap:12px;
+                    margin-bottom: 5rem;
+                }
                 
                 .profil-card{
                     .name{
@@ -64,6 +79,11 @@
                         font-weight: 400;
                         line-height: 60px;
                         letter-spacing: 0em;
+                        @media (max-width: $sm) {
+                            font-size: 0.9rem;
+                            line-height: 20px;
+                        }
+                        
                     }
                 }
            
@@ -73,6 +93,13 @@
 }
 
 .section2-3{
+    .content{
+        margin-bottom: 17rem;
+        @media (max-width: $sm) {
+            
+            margin-bottom: 5rem;
+        }
+    }
     .link-list-li:last-child{
         border-bottom: none;
     }
