--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import "./base/global";
 @import "./base/reset";
 @import "./base/structure";
+@import "./base/font";
 @import "./component/layout/footer";
 @import "./component/layout/header";
 @import "./base/vars";
