p-m-button done again

--- a/sass/base/_global.scss
+++ b/sass/base/_global.scss
@@ -27,7 +27,7 @@ body {
         ul{
             color:white
         }
-        button{
+        .btn-light{
             background-color: #FFF;
             color:black;
         }
@@ -38,6 +38,9 @@ body {
         }
         a{
             color:#FFF;
+        }
+        .underline{
+            color:white;
         }
         
       }
