--- a/sass/component/section/_section-page1.scss
+++ b/sass/component/section/_section-page1.scss
@@ -11,9 +11,10 @@
             }
 
             button{
-                width: 280px;
+                //width: 30%;
                 height: 50px;
                 padding: 16px 35px;
+                
             }
             .img {
                 //position: absolute;
@@ -27,14 +28,15 @@
 }
 
 .section1-2{
-    .container{
-        .content{
             margin-top: 6.3rem;
             margin-bottom: 6.3rem;
             @media (max-width: $md) {
                 margin-bottom: 4rem;
                 margin-top: 4rem;
             }
+    .container{
+        .content{
+            
             .right-bar{
                 display: flex;
                 flex-direction: column;
@@ -48,17 +50,17 @@
 }
 
 .section1-3{
-    .container{
-        .content{
             margin-bottom: 8.62rem;
             @media (max-width: $md) {
                 margin-bottom: 6rem;
             }
-        }
-    }
 }
 
 .section1-4{
+    margin-bottom: 6rem;
+    @media (max-width: $md) {
+        margin-bottom: 4rem;
+    }
     .container{
         h3{
             margin-bottom: 3.15rem;
@@ -67,15 +69,13 @@
             }
         }
         .content-grid{
-            margin-bottom: 6rem;
+           
             display: flex;
             justify-content: space-between;
             gap:10px;
             //display: grid;
             //grid-template-columns: repeat(3,1fr);
-            @media (max-width: $md) {
-                margin-bottom: 4rem;
-            }
+            
             img{
                 @media (max-width: $md) {
                     display: none;
