--- a/sass/main.css
+++ b/sass/main.css
@@ -25,7 +25,7 @@ body.dark svg circle {
 body.dark ul {
   color: white;
 }
-body.dark button {
+body.dark .btn-light {
   background-color: #FFF;
   color: black;
 }
@@ -37,6 +37,9 @@ body.dark input::placeholder {
 }
 body.dark a {
   color: #FFF;
+}
+body.dark .underline {
+  color: white;
 }
 
 img, svg {
@@ -92,85 +95,24 @@ a {
   cursor: pointer;
 }
 
-html {
-  height: 100%;
-}
-
-body {
-  font-family: "A";
-  min-height: 100%;
-  background-color: #FFF;
-  overflow-x: hidden;
-  font-size: 24px;
-  line-height: 1.5;
-  color: black;
-  transition: background-color 1s ease-in-out;
-}
-body.dark {
-  background-color: black;
-  color: white;
-}
-body.dark svg path {
-  stroke: white;
-}
-body.dark svg circle {
-  stroke: white;
-}
-body.dark ul {
-  color: white;
-}
-body.dark button {
-  background-color: #FFF;
-  color: black;
-}
-body.dark input::-moz-placeholder {
-  color: black;
-}
-body.dark input::placeholder {
-  color: black;
-}
-body.dark a {
-  color: #FFF;
-}
-
-img, svg {
-  max-width: 100%;
-}
-
-.container {
-  max-width: 1220px;
-  margin: 0 auto;
-  padding: 0 20px;
-}
-
-.tab {
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 18px;
-  letter-spacing: 0px;
-  text-align: left;
-  color: #CCCCCC;
-  margin-bottom: 3.18rem;
-}
-
 .content {
   display: flex;
 }
 
-.main-title {
+h1 {
   font-size: 5rem;
   font-weight: 300;
   line-height: 85px;
   letter-spacing: 0em;
 }
 @media (max-width: 1025px) {
-  .main-title {
+  h1 {
     font-size: 4.2rem;
     line-height: 4.6rem;
   }
 }
 @media (max-width: 769px) {
-  .main-title {
+  h1 {
     font-size: 3rem;
     line-height: 3.2rem;
   }
@@ -299,12 +241,26 @@ img, svg {
 
 .underline {
   text-decoration: underline;
+  color: black;
 }
 
 .btn-light {
   background-color: black;
+  border: 1px solid black;
   color: white;
-  padding: 16px 30px;
+  padding: 1rem 2.18rem;
+  font-size: 1rem;
+  line-height: 1.1;
+  width: 25%;
+  text-align: center;
+}
+@media (max-width: 769px) {
+  .btn-light {
+    text-align: center;
+    font-size: 12px;
+    padding: 10px 20px;
+    width: 50%;
+  }
 }
 
 .brand-sm {
@@ -392,7 +348,7 @@ img, svg {
 }
 
 .link-list-li {
-  width: 90%;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -404,12 +360,30 @@ img, svg {
   }
 }
 
-.link-list-p {
-  width: 80%;
+.link-list-a {
+  width: 100%;
   line-height: 52px;
   font-size: 2.875rem;
   font-weight: 300;
   margin-bottom: 22px;
+  color: black;
+}
+.link-list-a:after {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 14px;
+  height: 14px;
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20width%3D%2214%22%20height%3D%2212%22%20viewBox%3D%220%200%2014%2012%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20fill%3D%22none%22%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M-2.62268e-07%206C-2.80374e-07%205.58579%200.335786%205.25%200.75%205.25L11.4393%205.25L7.46967%201.28033C7.17678%200.987436%207.17678%200.512562%207.46967%200.21967C7.76256%20-0.0732235%208.23744%20-0.0732235%208.53033%200.21967L13.7803%205.46967C14.0732%205.76256%2014.0732%206.23744%2013.7803%206.53033L8.53033%2011.7803C8.23744%2012.0732%207.76257%2012.0732%207.46967%2011.7803C7.17678%2011.4874%207.17678%2011.0126%207.46967%2010.7197L11.4393%206.75L0.75%206.75C0.335786%206.75%20-2.44162e-07%206.41421%20-2.62268e-07%206Z%22%20fill%3D%22%23F89B3A%22%2F%3E%3C%2Fsvg%3E");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.link-list-p {
+  width: 80%;
 }
 @media (max-width: 1025px) {
   .link-list-p {
@@ -428,14 +402,6 @@ img, svg {
 
 .dark {
   color: white;
-}
-
-@font-face {
-  font-family: "Almarai";
-  src: url("https://fonts.googleapis.com/css2?family=Almarai:wght@300&family=Nunito+Sans:wght@300&display=swap");
-}
-body {
-  font-family: "Almarai";
 }
 
 footer {
@@ -524,11 +490,6 @@ header .container .wrapper {
   justify-content: space-between;
   padding: 2rem 0;
 }
-@media (max-width: 1025px) {
-  header .container .wrapper {
-    padding: 1rem;
-  }
-}
 header .container .wrapper .c-item-01 {
   display: flex;
   width: 30%;
@@ -544,6 +505,9 @@ header .container .wrapper .c-item-01 p {
   color: #BCBCBC;
   line-height: 17, 86px;
   color: #BCBCBC;
+}
+header .container .wrapper svg {
+  cursor: pointer;
 }
 header .container .wrapper .c-item-02 {
   width: 30%;
@@ -569,25 +533,25 @@ header .container .wrapper .c-item-03 {
   text-align: end;
 }
 
-.section4-1 .container .content {
+.section4-1 {
   margin-bottom: 8rem;
 }
-.section4-1 .container .content a {
+.section4-1 .underline {
   color: black;
 }
-.section4-1 .container .content .btn-light {
+.section4-1 .btn-light {
   margin-top: 4rem;
 }
 
-.section4-2 .container .content {
+.section4-2 {
   margin-bottom: 8rem;
 }
 
-.section3-1 .container .wrapper {
+.section3-1 {
   margin-bottom: 52px;
 }
 @media (max-width: 1025px) {
-  .section3-1 .container .wrapper {
+  .section3-1 {
     margin-bottom: 38px;
   }
 }
@@ -610,7 +574,7 @@ header .container .wrapper .c-item-03 {
 .section3-1 .container .wrapper .person-info img {
   max-width: 70%;
 }
-@media (max-width: 769px) {
+@media (max-width: 1025px) {
   .section3-1 .container .wrapper .person-info {
     display: flex;
     flex-direction: column;
@@ -655,39 +619,39 @@ header .container .wrapper .c-item-03 {
   background-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="20" viewBox="0 0 24 20"><path d="M0 17.7798C1.7958 17.9501 3.51438 17.686 5.15859 16.9429C5.90348 16.6064 6.59614 16.1812 7.23316 15.6513C6.82551 15.6148 6.42581 15.5644 6.0352 15.4532C5.64572 15.3426 5.27441 15.1885 4.92241 14.9858C4.56699 14.7808 4.23997 14.5358 3.9436 14.2485C3.65008 13.9647 3.39402 13.649 3.176 13.3015C2.95628 12.9511 2.78028 12.5798 2.64629 12.1628C2.70136 12.1663 2.74338 12.1657 2.78369 12.1727C3.44001 12.2827 4.09065 12.2497 4.73562 12.091C4.76911 12.0829 4.80091 12.0684 4.83384 12.047C3.34065 11.678 2.20742 10.8295 1.47275 9.45164C1.0793 8.71317 0.897615 7.91794 0.895912 7.05321C1.25473 7.24145 1.60787 7.39435 1.97975 7.49687C2.34765 7.59823 2.72123 7.65846 3.10844 7.65904C1.67089 6.5748 0.916351 5.14015 0.940765 3.30933C0.95212 2.4695 1.17808 1.6847 1.59425 0.939859C3.55299 3.32902 5.98297 4.94843 8.92335 5.75351C9.86525 6.01125 10.8242 6.16242 11.8166 6.20759C11.8024 6.11898 11.7922 6.04716 11.7791 5.9765C11.2875 3.29137 12.9623 0.726717 15.5087 0.142314C17.2914 -0.266594 18.8522 0.210658 20.1665 1.50978C20.2262 1.56886 20.2761 1.59666 20.3658 1.57697C21.3776 1.35919 22.3325 0.990248 23.233 0.473611C23.271 0.451602 23.3096 0.43133 23.3755 0.39542C23.355 0.460869 23.3442 0.501412 23.3301 0.540797C22.9451 1.60535 22.282 2.44344 21.352 3.06317C21.3168 3.08692 21.2822 3.11182 21.2532 3.14947C22.2042 3.04985 23.1126 2.79443 24 2.40984C23.9949 2.4666 23.9614 2.4973 23.9381 2.53147C23.3164 3.43733 22.5721 4.22213 21.7 4.87893C21.6103 4.9467 21.5831 5.01446 21.5893 5.12509C21.6183 5.62609 21.5967 6.12651 21.5621 6.62635C21.5019 7.49282 21.3617 8.34538 21.1459 9.18463C20.5333 11.5616 19.4398 13.678 17.8132 15.4961C15.9538 17.5754 13.6766 18.9405 10.9922 19.5967C10.3654 19.7502 9.7307 19.8504 9.09027 19.9222C8.32324 20.008 7.55394 20.0155 6.7869 19.9802C5.05696 19.9002 3.39913 19.4907 1.8151 18.7743C1.22578 18.5079 0.656889 18.2009 0.109008 17.8545C0.0721045 17.8314 0.0363361 17.8065 0 17.7827L0 17.7798ZM13.3234 17.9536C13.3331 17.9536 13.3427 17.9541 13.3524 17.9547C13.3512 17.935 13.3495 17.9153 13.3484 17.8951C13.3416 17.8951 13.3348 17.8951 13.328 17.8951C13.3263 17.9148 13.3246 17.9339 13.3229 17.9536H13.3234Z" fill="black"/></svg>');
 }
 
-.section3-2 .container .content {
+.section3-2 {
   margin-bottom: 9.25rem;
 }
 @media (max-width: 1025px) {
-  .section3-2 .container .content {
+  .section3-2 {
     margin-bottom: 7rem;
   }
 }
 @media (max-width: 1025px) {
-  .section3-2 .container .content {
+  .section3-2 {
     margin-bottom: 5rem;
   }
 }
 
-.section3-3 .container .content {
+.section3-3 {
   margin-bottom: 16rem;
 }
 @media (max-width: 1025px) {
-  .section3-3 .container .content {
+  .section3-3 {
     margin-bottom: 7rem;
   }
 }
 @media (max-width: 1025px) {
-  .section3-3 .container .content {
+  .section3-3 {
     margin-bottom: 5rem;
   }
 }
 
-.section2-1 .container .wrapper {
+.section2-1 {
   margin-bottom: 7.37rem;
 }
 @media (max-width: 1025px) {
-  .section2-1 .container .wrapper {
+  .section2-1 {
     margin-bottom: 4rem;
   }
 }
@@ -725,7 +689,7 @@ header .container .wrapper .c-item-03 {
   width: 33px;
   height: 33px;
   background-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="33" height="33" viewBox="0 0 33 33"><path d="M33 0L23.6628 0L0 0L0 9.33721L23.6628 9.33721L23.6628 33H33V9.33721V0Z" fill="%23F89B3A"/></svg>');
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
 }
@@ -736,8 +700,15 @@ header .container .wrapper .c-item-03 {
   letter-spacing: 0em;
 }
 
-.section2-2 .container .right-bar .wrapper {
+.section2-2 {
   margin-bottom: 10rem;
+}
+@media (max-width: 769px) {
+  .section2-2 {
+    margin-bottom: 5rem;
+  }
+}
+.section2-2 .container .right-bar .wrapper {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   row-gap: 22px;
@@ -748,7 +719,6 @@ header .container .wrapper .c-item-03 {
   .section2-2 .container .right-bar .wrapper {
     grid-template-columns: repeat(2, 1fr);
     row-gap: 12px;
-    margin-bottom: 5rem;
   }
 }
 .section2-2 .container .right-bar .wrapper .profil-card .name {
@@ -765,11 +735,11 @@ header .container .wrapper .c-item-03 {
   }
 }
 
-.section2-3 .content {
+.section2-3 {
   margin-bottom: 17rem;
 }
 @media (max-width: 769px) {
-  .section2-3 .content {
+  .section2-3 {
     margin-bottom: 5rem;
   }
 }
@@ -788,16 +758,15 @@ header .container .wrapper .c-item-03 {
   }
 }
 .section1-1 .container .wrapper button {
-  width: 280px;
   height: 50px;
   padding: 16px 35px;
 }
-.section1-2 .container .content {
+.section1-2 {
   margin-top: 6.3rem;
   margin-bottom: 6.3rem;
 }
 @media (max-width: 1025px) {
-  .section1-2 .container .content {
+  .section1-2 {
     margin-bottom: 4rem;
     margin-top: 4rem;
   }
@@ -813,15 +782,23 @@ header .container .wrapper .c-item-03 {
   }
 }
 
-.section1-3 .container .content {
+.section1-3 {
   margin-bottom: 8.62rem;
 }
 @media (max-width: 1025px) {
-  .section1-3 .container .content {
+  .section1-3 {
     margin-bottom: 6rem;
   }
 }
 
+.section1-4 {
+  margin-bottom: 6rem;
+}
+@media (max-width: 1025px) {
+  .section1-4 {
+    margin-bottom: 4rem;
+  }
+}
 .section1-4 .container h3 {
   margin-bottom: 3.15rem;
 }
@@ -831,15 +808,9 @@ header .container .wrapper .c-item-03 {
   }
 }
 .section1-4 .container .content-grid {
-  margin-bottom: 6rem;
   display: flex;
   justify-content: space-between;
   gap: 10px;
-}
-@media (max-width: 1025px) {
-  .section1-4 .container .content-grid {
-    margin-bottom: 4rem;
-  }
 }
 @media (max-width: 1025px) {
   .section1-4 .container .content-grid img {
